@@ -1,6 +1,6 @@
 {
   "name":    "simp-pupmod",
-  "version": "6.0.5",
+  "version": "6.0.6",
   "author":  "SIMP",
   "summary": "A puppet module to manage puppet",
   "license": "Apache-2.0",
