@@ -11,6 +11,10 @@ describe 'pupmod::agent::cron' do
 
         it { is_expected.to create_class('pupmod::agent::cron') }
         it { is_expected.to contain_file('/usr/local/bin/puppetagent_cron.sh').with_content(/-gt 3600/) }
+        it { is_expected.to contain_file('/usr/local/bin/puppetagent_cron.sh').with_content(
+          /service puppet stop > \/dev\/null 2>&1/
+        )}
+
         it { is_expected.to contain_cron('puppetagent').with({
             'minute'    => ['27','57'],
             'hour'      => '*',
